* Fixed the input box after "Highlight links broken for at least..." being shifted too far to the right.
git-svn-id: https://plugins.svn.wordpress.org/broken-link-checker/trunk@270766 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/links-page.css
+++ b/css/links-page.css
@@ -302,3 +302,9 @@ div.search-box{
 #s_link_type optgroup option {
 	margin-left: 1em;
 }
+
+/* Screen options */
+
+#blc-screen-options .blc-less-padding {
+	padding-right: 2px;
+}
